firmware-nonfree (0.37) UNRELEASED; urgency=low

  * debian/README.source: Document the oddities of this source package

 -- Ben Hutchings <ben@decadent.org.uk>  Sun, 24 Jun 2012 22:56:53 +0100

firmware-nonfree (0.36) unstable; urgency=low

  * debian/control: Set Multi-Arch: foreign
  * Update Chelsio T4 firmware to version 1.4.16.0
  * Update to linux-support-3.2.0-2
  * Add Chelsio T3 firmware version 7.10.0 (for Linux 2.6.36 onward)
  * Add Intel Wireless 105, 135, 2200, 2230 firmware
  * Update Intel Wireless 6030 firmware to version 18.168.6.1 (ABI 6)
    (Closes: #658123, #675425)
  * Remove Intel Wireless firmware not required by Linux 2.6.32, 3.2 or 3.3
  * Update Broadcom NetXtreme II firmware for use with Linux 3.3
    (Closes: #664762)
    - Fixes iSCSI problems with some LeftHand targets
  * Remove Broadcom NetXtreme II firmware not referenced by Linux 2.6.32,
    3.2 or 3.3
  * Update Realtek RTL8168E-3 and RTL8168F firmware to version 0.0.4
    - Stability fixes
  * Update QLogic QLA2300/ISP2312/SP202 and ISP2322/SP212 firmware to
    version 3.03.28
  * Update QLogic ISP2422/ISP2432[M]/SP222/SP232 and ISP2532 firmware to
    version 5.06.05

 -- Ben Hutchings <ben@decadent.org.uk>  Tue, 12 Jun 2012 16:08:50 +0100

firmware-nonfree (0.35) unstable; urgency=low

  * Add version to firmware-libertas's conflict with libertas-firmware so
    it can coexist with the current transitional package
  * Add Realtek RTL8168F firmware for use with r8169 driver
  * Update Realtek RTL8168E-3 firmware to version 0.0.3
  * Replace Broadcom NetXtreme II 10Gb firmware version 6.2.9.0
    (for Linux 3.0) with version 7.0.29.0 (for Linux 3.2)
  * Update to linux-support-3.2.0-1

 -- Ben Hutchings <ben@decadent.org.uk>  Thu, 19 Jan 2012 03:24:38 +0000

firmware-nonfree (0.34) unstable; urgency=low

  [ Ben Hutchings ]
  * Add Marvell Libertas 8xxx firmware, replacing libertas-firmware package
    (Closes: #609856)