@@ -1,6 +1,15 @@
 firmware-nonfree (0.37) UNRELEASED; urgency=low
 
+  [ Ben Hutchings ]
   * debian/README.source: Document the oddities of this source package
+
+  [ Christian Perrier ]
+  * Debconf templates and debian/control reviewed by the debian-l10n-
+    english team as part of the Smith review project (Closes: #685579)
+  * Add debconf template translations:
+    - Russian (Yuri Kozlov) (Closes: #686681)
+    - Slovak (Slavko) (Closes: #686678)
+    - Polish (Michał Kułach) (Closes: #686601)
 
  -- Ben Hutchings <ben@decadent.org.uk>  Sun, 24 Jun 2012 22:56:53 +0100
 
